# fact_check_in

./: .bumpversion.cfg  .env.example  .env.pretix.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  DEVELOPER.md  Dockerfile  README.md  apprunner.yaml  compose.override.yaml  compose.yaml  docker-compose.yml  environment-dev.yml  environment.yml  event_config.yml.example  index.html  integration_test_results.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: deploy-docs.yml
app/: __init__.py  auth.py  errors.py  main.py  run.py
app/config/: __init__.py  base.yml
app/middleware/: __init__.py  interface.py
app/models/: __init__.py  base.py  models.py
app/pretix/: README.md  __init__.py  addon_stats.py  backend.py  mapping.py  models.py  pretix_api.py  router.py  validation.py
app/routers/: __init__.py  common.py  tickets.py
app/ticketing/: __init__.py  backend.py  utils.py
app/tito/: __init__.py  backend.py  models.py  router.py  tito_api.py
docs/: PRETIX_SETUP_GUIDE.md  README.md  TITO_PRETIX_COMPARISON.md  index.md  pull_request_template.md
docs/sphinx/source/: api.rst  changelog_link.rst  conf.py  conf_local.py  developer_link.rst  documentation.md  index.rst  readme_link.rst
other/: teilnehmer_fuer_ibb.ipynb
scripts/: hook_add_logo_to_social_cards.py  hook_copyright_year.py  sync_readme_to_docs.py
search/: search_index.json
tests/: conftest.py  test_auth.py  test_main.py  test_name_tickets.py  test_pretix.py
tests/integration/: README.md  conftest.py  debug_email_search.py  integration_test_results.json  pretix_test_data.json  run_integration_tests.py  test_helpers.py  test_pretix_live.py  test_summary.py
tests/test_data/: PRETIX_FAKE_DATA_REFERENCE.md  fake_all_releases.json  fake_all_releases_pretix.json  fake_all_sales.json  fake_all_sales_fail.json  fake_all_sales_pretix.json  generate_fake_data.py
