[project]
name= "Tito API Wrapper"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
]

[project.optional-dependencies]
tests = [
  'pytest >=7, < 8',
]

[tool.pytest.ini_options]
markers = [
    "smoke_test: marks tests as smoke tests for deployment",
]
minversion = "7.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
target-version = ['py310']

dynamic = ["version"]

