[project]
name = "fact-check-in"
version = "3.0.0"
description = "Validate if the attendee is registered for the conference by ticket code, name and email."
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "cachetools>=7.0.5",
    "fastapi>=0.136.0",
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material[imaging]>=9.7.6",
    "omegaconf>=2.3.0",
    "pydantic[email]>=2.13.2",
    "PyJWT[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "starlette-context>=0.5.1",
    "structlog>=25.5.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "bumpversion>=0.6.0",
    "faker>=40.13.0",
    "httpx>=0.28.1",
    "hypothesis>=6.152.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[build-system]
requires = ["uv_build>=0.10.12,<1.0.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.uv]
exclude-newer = "1 day"

[tool.ruff]
line-length = 140
target-version = "py314"
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",
    "W",   # pycodestyle
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PL",  # pylint
    "TID", # tidy
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",    # may cause conflicts with ruff formatter
    "W191",
    "PLC0415",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--import-mode=importlib",
    "--tb=short",
]
markers = [
    "smoke_test: marks tests as smoke tests",
]
filterwarnings = [
    "error",
    "ignore:UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:Provider `faker.providers.*',
    'ignore:Looking for locale `en_US` in provider.*',
]
