[metadata]
name = "Tito API Wrapper"
version = 0.1.0
author = Königsweg
author_email = info@koenigsweg.com
description = "Wrapper for Tito API to be run as REST service"
long_description = file: README.md
long_description_content_type = text/markdown
url = unset
classifiers =
    Programming Language :: Python :: 3
    License :: Königsweg internal use only.
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10

[options.packages.find]
where = .
include = "UPDATE include IN setup.cfg"
exclude = tests
